Update css, fix squished button

--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,7 @@ input[type="file"] {
   right: 30px;
   margin-right: 30px;
   margin-left: auto;
+  aspect-ratio: 1;
 }
 
 .tasks-list__task-button--complete {
